# personal_knowledge_assistant

./: .gitignore  AGENT_MODE_TESTING_GUIDE.md  AGENT_MODE_TEST_RESULTS.md  BEDROCK_AUTH_README.md  CHANGELOG.md  CI_TEST_STATUS.md  QUICKSTART.md  README.md  bedrock-auth.sh  test_agent_api.sh  test_agentic_rag.md
backend/: .env.example  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  test_agent_mode.py  test_chat.json  test_note.json  test_note2.json  test_prompt_models.py  test_upload.txt
backend/alembic/: env.py
backend/alembic/versions/: 1372f6e4ef76_add_generated_images_table_for_image_.py  1b37bd8b4e6b_change_research_projects_default_source_.py  2904c3476915_add_research_task_and_research_source_.py  310a1193bdaf_add_semantic_metadata_to_chunks.py  3988218a7e66_add_youtube_video_model_and_extend_.py  63d22e19faa2_add_conceptual_snapshots_table_for_.py  77a15ccbb43a_add_token_count_to_messages_for_context_.py  7862fed0b1f1_add_is_pinned_to_conversations.py  854629751977_add_research_projects_and_briefings_.py  9444033aad25_add_tags_and_note_tags_tables_with_many_.py  99790aa36c95_change_generated_images_metadata_and_.py  b997ac433611_add_message_feedback_table.py  ba0350382b81_add_performance_indexes.py  c32314510b0f_create_conceptual_snapshots_table.py  c9c06f1560db_add_suggested_questions_to_messages.py  d0046533c76c_make_chunk_vector_id_nullable.py  d09fab6f7e52_add_metadata_field_to_message_model.py  d3bd349b1741_add_category_field_to_documents.py  d5f76ea5b82f_add_archive_fields_to_documents.py  (+1 more)
backend/app/: main.py
backend/scripts/: backup_library.sh  build_comprehensive_library.py  build_library_batch.py  categorize_existing_documents.py  cleanup_orphaned_chunks.py  clear_and_reprocess.py  expand_knowledge_library.py  expand_to_200plus.py  expand_with_reputable_sources.py  reformat_documents.py  reprocess_documents_with_metadata.py  restore_library.sh
backend/tests/: conftest.py  manual_research_test.py  quick_research_test.py
backend/uploads/: 1a85f813-c571-458c-a36e-be07b6cc95d5.txt  a90df172-9208-4cf1-ae62-1f77a112b3db.md  e5ac0bac-450a-455d-a48e-2014c291a67d.txt
(+347 files in other folders)
